reverse link order for SOCI_sqlite3_PLUGIN and SOCI_LIBRARIES to fix static linking

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,7 +59,7 @@ if(ENABLE_STATIC)
 	add_library(lime-static STATIC ${LIME_PRIVATE_HEADER_FILES} ${LIME_SOURCE_FILES_CXX})
 	set_target_properties(lime-static PROPERTIES OUTPUT_NAME lime)
 	target_include_directories(lime-static PUBLIC ${SOCI_INCLUDE_DIRS} ${SOCI_INCLUDE_DIRS}/soci ${JNI_INCLUDE_DIRS})
-	target_link_libraries(lime-static INTERFACE bctoolbox ${SOCI_LIBRARIES} ${SOCI_sqlite3_PLUGIN} ${JNI_LIBRARIES})
+	target_link_libraries(lime-static INTERFACE bctoolbox ${SOCI_sqlite3_PLUGIN}  ${SOCI_LIBRARIES} ${JNI_LIBRARIES})
 	if(ENABLE_PROFILING)
 		set_target_properties(lime-static PROPERTIES LINK_FLAGS "-pg")
 	endif()
@@ -71,7 +71,7 @@ if(ENABLE_SHARED)
 		$<INSTALL_INTERFACE:include>
 		$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
 	)
-	target_link_libraries(lime PRIVATE bctoolbox ${SOCI_LIBRARIES} ${SOCI_sqlite3_PLUGIN} ${JNI_LIBRARIES})
+	target_link_libraries(lime PRIVATE bctoolbox ${SOCI_sqlite3_PLUGIN} ${SOCI_LIBRARIES} ${JNI_LIBRARIES})
 	if(APPLE)
 		if(IOS)
 			set(MIN_OS ${LINPHONE_IOS_DEPLOYMENT_TARGET})
