Install Lime in the right folder

--- a/tester/CMakeLists.txt
+++ b/tester/CMakeLists.txt
@@ -93,6 +93,16 @@ else()
 	if(ENABLE_PROFILING)
 		set_target_properties(lime_tester PROPERTIES LINK_FLAGS "-pg")
 	endif()
+	install(TARGETS lime_tester
+		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+		)
+	install(DIRECTORY data
+		DESTINATION ${CMAKE_INSTALL_DATADIR}/lime_tester
+		PATTERN "*"
+		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
 endif()
 
 if (ENABLE_JNI)
