--- a/tester/CMakeLists.txt
+++ b/tester/CMakeLists.txt
@@ -41,6 +41,7 @@ set(SOURCE_FILES_CXX
 	lime_crypto-tester.cpp
 	lime_massive_group-tester.cpp
 	lime_multidomains-tester.cpp
+	lime_server-tester.cpp
 )
 
 set(SOURCE_FILES_C
