Do not set Wdeprecated-copy warning as error to avoid soci chain errors... Also added Wno-unknown-warning-option to avoid errors on older platforms.
differenciate behaviour to disable warnings in gcc/clang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,13 +111,15 @@ else()
 	list(APPEND STRICT_OPTIONS_CPP "-Wall" "-Wuninitialized" "-Wno-deprecated-declarations" "-Wno-missing-field-initializers")
 
 	if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
-		list(APPEND STRICT_OPTIONS_CPP "-Qunused-arguments" "-Wno-array-bounds")
+		list(APPEND STRICT_OPTIONS_CPP "-Qunused-arguments" "-Wno-array-bounds" "-Wno-error=unknown-warning-option")
+	elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU")
+		list(APPEND STRICT_OPTIONS_CPP "-Wno-unknown-warning")
 	endif()
 	if(APPLE)
 		list(APPEND STRICT_OPTIONS_CPP "-Wno-error=unknown-warning-option" "-Qunused-arguments" "-Wno-tautological-compare" "-Wno-unused-function" "-Wno-array-bounds")
 	endif()
 	if(ENABLE_STRICT)
-		list(APPEND STRICT_OPTIONS_CPP "-Werror" "-Wextra" "-Wno-unused-parameter" "-fno-strict-aliasing")
+		list(APPEND STRICT_OPTIONS_CPP "-Werror" "-Wextra" "-Wno-unused-parameter" "-Wno-deprecated-copy" "-fno-strict-aliasing")
 	endif()
 endif()
 if(STRICT_OPTIONS_CPP)
