Update CMakeLists.txt so that the project can be added as a subdirectory of linphone-sdk.
Rename CMake targets for uniform naming.

--- a/cmake/LimeConfig.cmake.in
+++ b/cmake/LimeConfig.cmake.in
@@ -1,6 +1,6 @@
 ############################################################################
 # LimeConfig.cmake
-# Copyright (C) 2017  Belledonne Communications, Grenoble France
+# Copyright (C) 2017-2023  Belledonne Communications, Grenoble France
 #
 ############################################################################
 #
@@ -34,7 +34,7 @@ set(LIME_TARGETNAME lime)
 
 include("${CMAKE_CURRENT_LIST_DIR}/${LIME_TARGETNAME}Targets.cmake")
 
-if(@ENABLE_SHARED@)
+if(@BUILD_SHARED_LIBS@)
 	set(LIME_LIBRARIES ${LIME_TARGETNAME})
 else()
 	set(LIME_TARGETNAME lime-static)
