--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -68,7 +68,7 @@ if(ENABLE_PQCRYPTO)
 	target_link_libraries(lime PRIVATE ${PostQuantumCryptoEngine_TARGET})
 endif()
 if(ENABLE_PROFILING)
-	set_target_properties(lime PROPERTIES LINK_FLAGS "-pg")
+	target_link_options(lime PRIVATE "-pg")
 endif()
 
 if(BUILD_SHARED_LIBS)
@@ -84,12 +84,11 @@ if(BUILD_SHARED_LIBS)
 		set_target_properties(lime PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
 	endif()
 	if(MSVC)
-		if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
-			install(FILES $<TARGET_PDB_FILE:lime>
-				DESTINATION ${CMAKE_INSTALL_BINDIR}
-				PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
-			)
-		endif()
+		install(FILES $<TARGET_PDB_FILE:lime>
+			DESTINATION ${CMAKE_INSTALL_BINDIR}
+			PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+			CONFIGURATIONS Debug RelWithDebInfo
+		)
 	endif()
 endif()
 
