--- a/tester/CMakeLists.txt
+++ b/tester/CMakeLists.txt
@@ -53,6 +53,9 @@ find_package (Threads REQUIRED)
 if(ANDROID OR IOS)
 	add_library(limetester SHARED ${HEADER_FILES_CXX} ${SOURCE_FILES_CXX} ${SOURCE_FILES_C} )
 	target_link_libraries(limetester PRIVATE ${BCToolbox_tester_TARGET} ${BelleSIP_TARGET} lime ${Soci_TARGET} ${Soci_sqlite3_TARGET} ${CMAKE_THREAD_LIBS_INIT})
+	if(ENABLE_PQCRYPTO)
+		target_link_libraries(limetester PRIVATE ${PostQuantumCryptoEngine_TARGET})
+	endif()
 	if(IOS)
 		target_link_libraries(limetester PRIVATE sqlite3)
 		set(MIN_OS ${LINPHONE_IOS_DEPLOYMENT_TARGET})
@@ -78,6 +81,9 @@ else()
 	add_executable(lime-tester ${SOURCE_FILES_CXX} ${HEADER_FILES_CXX} ${SOURCE_FILES_C} )
 	set_target_properties(lime-tester PROPERTIES LINKER_LANGUAGE CXX)
 	target_link_libraries(lime-tester PRIVATE ${BCToolbox_tester_TARGET} ${BelleSIP_TARGET} lime ${Soci_TARGET} ${Soci_sqlite3_TARGET} ${CMAKE_THREAD_LIBS_INIT})
+	if(ENABLE_PQCRYPTO)
+		target_link_libraries(lime-tester PRIVATE ${PostQuantumCryptoEngine_TARGET})
+	endif()
 
 	# Some tests suite need a local X3DH server running in default config, so run them suite by suite to at least be able to pass some if no server can be found
 	add_test(NAME crypto COMMAND lime-tester --verbose --resource-dir ${CMAKE_CURRENT_SOURCE_DIR} --suite "Crypto")
